# phevcore

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  PHEV - Sheet1.csv  README.md  TODO.md  runtests.bat  splint.cmake
.github/workflows/: dockerimage.yml
include/: logger.h  msg_gcp_mqtt.h  msg_mqtt.h  msg_mqtt_paho.h  msg_pipe.h  msg_pipe_splitter.h  msg_tcpip.h  msg_utils.h  phev.h  phev_config.h  phev_core.h  phev_model.h  phev_pipe.h  phev_register.h  phev_service.h  phev_tcpip.h
include/msg/: config.h  logger.h  msg_core.h  msg_gcp_mqtt.h  msg_mqtt.h  msg_mqtt_paho.h  msg_pipe.h  msg_pipe_splitter.h  msg_tcpip.h  msg_utils.h
include/phev/: phev.h  phev_config.h  phev_core.h  phev_model.h  phev_pipe.h  phev_register.h  phev_service.h
src/: msg_core.c  msg_gcp_mqtt.c  msg_mqtt.c  msg_mqtt_paho.c  msg_pipe.c  msg_pipe_splitter.c  msg_tcpip.c  msg_utils.c  phev.c  phev_config.c  phev_core.c  phev_model.c  phev_pipe.c  phev_register.c  phev_service.c  phev_tcpip.c
src/msg/: msg_core.c  msg_gcp_mqtt.c  msg_mqtt.c  msg_mqtt_paho.c  msg_pipe.c  msg_pipe_splitter.c  msg_tcpip.c  msg_utils.c
src/phev/: phev.c  phev_config.c  phev_core.c  phev_model.c  phev_pipe.c  phev_register.c  phev_service.c  phev_tcpip.c
test/: CMakeLists.txt  config.json  run_phev.c  run_phev_core.c  run_phev_model.c  run_phev_pipe.c  run_phev_register.c  run_phev_service.c  test_phev.c  test_phev_config.c  test_phev_controller.c  test_phev_core.c  test_phev_model.c  test_phev_my18.c  test_phev_pipe.c  test_phev_register.c  test_phev_service.c  test_phev_store.c  test_runner.c
